# sparroWASM

./: .gitignore  Cargo.toml  README.md  index.html  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: algorithmWorker-AtFEscyI.js  algorithmWorker-B57MKmKN.js  algorithmWorker-BCM86LQl.js  algorithmWorker-BE3dlI69.js  algorithmWorker-BJGttzLk.js  algorithmWorker-BLhdyvaI.js  algorithmWorker-BM0YcTvp.js  algorithmWorker-BWX5xEYQ.js  algorithmWorker-Bl2taejo.js  algorithmWorker-C5ei71yn.js  algorithmWorker-C72gFRZV.js  algorithmWorker-C77DDclL.js  algorithmWorker-C9DnHwm_.js  algorithmWorker-CYlum5A8.js  algorithmWorker-Cbi3l7Jy.js  algorithmWorker-CfpWJwJN.js  algorithmWorker-CifkKFNZ.js  algorithmWorker-D92TPuZb.js  algorithmWorker-DFRS2PuJ.js  algorithmWorker-DQuv26-B.js  algorithmWorker-DVtQgbaY.js  algorithmWorker-DWiutMqP.js  algorithmWorker-DZurkf7G.js  algorithmWorker-DhbeDgR3.js  algorithmWorker-Dy8yBcKq.js  algorithmWorker-DyxezANJ.js  algorithmWorker-PQWd3zIn.js  algorithmWorker-c1Bkt9Qm.js  index-12w9c8l4.js  index-2Rt_rlOs.css  index-B7dzo9Om.js  index-B7rTVryP.js  index-B8ZGDenO.js  index-BFUlBAe8.js  index-BGGFdguX.js  index-BI1rl6VQ.css  index-BJf37ZWp.js  index-BLfph4vS.css  index-BN95XSDV.css  index-BPtOtw4Q.js  (+116 more)
favicon/: site.webmanifest
output/: log.txt
public/favicon/: site.webmanifest
src/: App.tsx  Demo.tsx  Enums.tsx  lib.rs  logger.rs  main.tsx  sparrow.rs
src/components/: Header.tsx  InputOverview.tsx  IsolationCheck.tsx
src/services/: algorithmWorker.ts
src/styles/: App.module.css  Header.module.css  Input.module.css  SVGMani.module.css  Solution.module.css  index.css
src/utils/: crossOriginIsolation.ts
wasm/src/: sparrow.rs
