[package]
name = "sparroWASM"
version = "0.1.0"
authors = ["Jeroen Gardeyn"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "EventTarget", "MouseEvent", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
anyhow = { version = "1.0" }
log = "0.4"
lazy_static = "1.5"
fern = "0.7"
web-time = "1.1"
jiff = "0.2"
wasm-bindgen-rayon = "1.3"
once_cell = "1.21.3"

rand = { version = "0.9" }
getrandom = { version = "0.3", features = ["wasm_js"] }

jagua-rs = { git = "https://github.com/JeroenGar/jagua-rs.git", rev = "1fb0824457cea336e65cebdd8b3dfb8c9d88487a", features = ["spp", "bpp"] }
sparrow = { git = "https://github.com/JeroenGar/sparrow.git", rev = "14247f7a257ebdc2fe40eee7d3c26665535f466c", features = ["only_final_svg", "simd"]}
#sparrow = {path = "../../sparrow", features = ["only_final_svg","simd"]}


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
